--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,21 @@ body {
 .calculator .button:hover {
 	text-decoration: none;
 }
-.calculator .button span {
+.calculator .button.toggle:hover {
+  cursor: default;
+}
+.calculator .button.toggle.active:hover {
+  cursor: pointer;
+}
+.calculator .button.toggle span,
+.calculator .button.toggle:hover span,
+.calculator .button.toggle:active span {
+  background-image: -webkit-linear-gradient(rgba(50,50,50,0.25), rgba(50,50,50,0.25));
+  box-shadow: 1px 1px 0px 0 white inset;
+  text-shadow: 0 1px 0px white;
+}
+.calculator .button span,
+.calculator .button.toggle.active span {
   background-color: lightblue;
   background-image: -webkit-linear-gradient(transparent, rgba(25,25,25,0.15));
   border: 1px solid #666;
@@ -271,10 +285,12 @@ body {
   display: block;
   text-shadow: 0 1px 0px white;
 }
-.calculator .button:hover span {
+.calculator .button:hover span,
+.calculator .button.toggle.active:hover span {
 	background-image: none;
 }
-.calculator .button:active span {
+.calculator .button:active span,
+.calculator .button.toggle.active:active span {
   background-image: none;
   box-shadow: -1px -1px 0px 0 white inset;
   text-shadow: 0 -1px 0px white;
